[tool.poetry]
name = "rigelcore"
version = "0.1.8"
description = "A common interface for Rigel and all its plugins."
homepage = "https://gitlab.inesctec.pt/pedro.m.melo/rigelcore"
keywords = ["docker", "ros", "cloud", "robotics"]
authors = ["Pedro Miguel Melo <pedro.m.melo@inesctec.pt>"]
maintainers = ["Pedro Miguel Melo <pedro.m.melo@inesctec.pt>"]
readme = "README.md"
repository = "https://gitlab.inesctec.pt/pedro.m.melo/rigelcore"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
docker = "^5.0.3"
python = "^3.8"
rich = "^11.2.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^6.3.2"}
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
mypy = "^0.931"
nox = "^2022.1.7"
pre-commit = "^2.17.0"
pytest = "^5.2"
twine = "^3.8.0"
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 90
